# RustMPC

./: Cargo.toml  LICENSE
src/: main.rs
src/modules/: config.rs  crossterm.rs  mod.rs  mpd.rs  ui.rs
